Added patreon into nav pane

--- a/Contact.html
+++ b/Contact.html
@@ -1,1 +1,19 @@
 
+<html>
+  <head><title>Contact Us</title></head>
+  <body>
+    <nav>
+      <a href = '#'> Home | </a>
+      <a href = '#'> About | </a>
+      <a href = '#'> Contact | </a>
+      <a href = '#'> Sponsors | </a>
+      <a href = '#'> Patreon | </a>
+    </nav>
+    <h1>My learning Git Contact page</h1>
+    <p>The first paragraph</p>
+    <p>The second paragraph</p>
+  </body>
+  <footer>
+    Original work by zrWo
+  </footer>
+</html>
