--- a/Homepage.html
+++ b/Homepage.html
@@ -6,6 +6,8 @@
       <a href = '#'> About | </a>
       <a href = '#'> Contact | </a>
       <a href = '#'> Sponsors | </a>
+      <a href = '#'> Donation | </a>
+      <a href = '#'> Patreon | </a>
     </nav>
     <h1>My learning Git Homepage</h1>
     <h6>Introduction to Github</h6>
