--- a/Homepage.html
+++ b/Homepage.html
@@ -13,6 +13,7 @@
     <h6>Introduction to Github</h6>
     <p>The first paragraph</p>
     <p>The second paragraph</p>
+    <p>The third paragraph</P>
   </body>
   <footer>
     Original work by zrWo
